# E-commerce-project_backend

./: pyproject.toml
authen/: admin.py  serializers.py  urls.py  views.py
ecommerce/: settings.py  urls.py  views.py
ecommerce/templates/: welcome.html
store/: admin.py  models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_imageproduct.py
